--- a/MVCPrototypeChat/MVCPrototypeChat.csproj
+++ b/MVCPrototypeChat/MVCPrototypeChat.csproj
@@ -163,9 +163,11 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Hubs\ChatHub.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AppContext.cs" />
     <Compile Include="Models\MessageInfo.cs" />
     <Compile Include="Models\User.cs" />
+    <Compile Include="Models\WaitingUser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\UserRegisterViewModel.cs" />
@@ -173,15 +175,28 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\1.jpg" />
+    <Content Include="Content\Images\2.jpg" />
+    <Content Include="Content\Images\3.jpg" />
+    <Content Include="Content\Images\4.jpg" />
+    <Content Include="Content\Images\6.jpg" />
+    <Content Include="Content\Images\7.jpg" />
     <Content Include="Content\Images\ajax-loader.gif" />
+    <Content Include="Content\Images\c3.jpg" />
+    <Content Include="Content\Images\design.jpg" />
+    <Content Include="Content\Images\development.jpg" />
+    <Content Include="Content\Images\seo.jpg" />
+    <Content Include="Content\style.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <None Include="Properties\PublishProfiles\MVCPrototypeChat - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\custom.js" />
+    <Content Include="Scripts\flip.min.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
@@ -194,8 +209,12 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\script.js" />
+    <Content Include="Scripts\wowslider.js" />
     <Content Include="Scripts\_references.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -212,11 +231,11 @@
     <Content Include="Views\Authentication\Register.cshtml" />
     <Content Include="Views\Shared\LoginPartial.cshtml" />
     <Content Include="Views\Shared\_ChatLayout.cshtml" />
-    <Content Include="Views\Chat\Chat.cshtml" />
-    <Content Include="Views\Chat\_AdminChatPartial.cshtml" />
-    <Content Include="Views\Chat\_UserChatPartial.cshtml" />
-    <Content Include="Views\Chat\_UnauthenticatedUserForm.cshtml" />
     <Content Include="Views\Authentication\LogIn.cshtml" />
+    <Content Include="Views\Chat\AdminChat.cshtml" />
+    <Content Include="Views\Chat\UserChat.cshtml" />
+    <Content Include="Views\Chat\UnauthUserChat.cshtml" />
+    <Content Include="Views\Shared\SliderPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
